fixed alignment

--- a/main.css
+++ b/main.css
@@ -180,3 +180,7 @@ h1,
 .start {
   margin-top: 1rem;
 }
+.message {
+  text-align: center;
+  font-size: 2rem;
+}
